# ahqstore-file-format

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/reader/: mod.rs
src/schema/: mod.rs
