[package]
name = "ahqstore-fotstore"
version = "0.0.1"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "The schema of .ahqstore file"
homepage = "https://github.com/ahqstore/ahqstore-file-format"
repository = "https://github.com/ahqstore/ahqstore-file-format"
authors = ["AHQ"]

[[bin]]
name = "dotstore"
path = "./src/main.rs"

[lib]
name = "libdotstore"
path = "./src/lib.rs"

[dependencies]
ahqstore-types = { version = "2.0.3", default-features = false }
serde_json = "1.0.117"
